--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
 
     <application
         android:allowBackup="true"
-        android:banner="@mipmap/ic_launcher"
-        android:icon="@mipmap/ic_launcher"
+        android:banner="@drawable/guide_logo"
+        android:icon="@drawable/guide_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.EPG">
