--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,8 +17,7 @@ activity = "1.10.1"
 constraintlayout = "2.1.4"
 compose-for-tv = "1.0.0-alpha10"
 playServicesAdsIdentifier = "18.2.0"
-media3CommonKtx = "1.6.1"
-media3Ui = "1.8.0"
+media3 = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,10 +45,12 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-tv-foundation = { module = "androidx.tv:tv-foundation", version.ref = "compose-for-tv"}
 androidx-tv-material = { module = "androidx.tv:tv-material", version.ref = "compose-for-tv"}
 play-services-ads-identifier = { group = "com.google.android.gms", name = "play-services-ads-identifier", version.ref = "playServicesAdsIdentifier" }
-androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3CommonKtx" }
-androidx-media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3Ui" }
+androidx-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
 
 
+media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
+media3-exoplayer-hls = { group = "androidx.media3", name = "media3-exoplayer-hls", version.ref = "media3" }
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
